crates/cox-tui/src/snapshots/cox_tui__plugin_ui__tests__every_widget_kind_no_color.snap
---
source: crates/cox-tui/src/plugin_ui.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 30, height: 13 },
    content: [
        "┌block───────────────────────┐",
        "│bold italic                 │",
        "└────────────────────────────┘",
        "  one                         ",
        "> two                         ",
        "  three                       ",
        "name       size               ",
        "a.rs       12                 ",
        "b.rs       7                  ",
        "model: cheap                  ",
        "cost:  $0.01                  ",
        "ctx ━━━━━━━━━━────────────────",
        "left  right                   ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 12, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 4, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
